teste deploy automático

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <title>Polytec Produtos Químicos</title>
   </head>
   <body>
-  	<span>Site em construção</span>
+  	<span>Site em construção - teste deploy automático</span>
   </body>
 </html>
