--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!-- Bootstrap CSS -->
+
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
     <!--my css-->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="assets/ico/favicon.ico" />
+
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,400i,500,500i,600,700,800,900" rel="stylesheet">
     <link rel="icon" href="assets/img/favicon.png">
+
     <title>Polytec Produtos Químicos</title>
   </head>
+  
   <body>
   	<span>Site em construção - teste deploy automático</span>
   </body>
+
 </html>
