Página de manutenção

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!--my css-->
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="shortcut icon" href="assets/ico/favicon.ico" />
+    <link rel="shortcut icon" href="assets/ico/favicon.ico"/>
 
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,400i,500,500i,600,700,800,900" rel="stylesheet">
@@ -23,7 +23,20 @@
   </head>
   
   <body>
-  	<span>Site em construção - teste deploy automático</span>
+  	<div class="container-fluid h-100 d-inline-block">
+  		<div class="row h100 align-middle">
+    		<div class="col-12">    
+		  		<img src="assets/img/logo.svg" class="logo mx-auto d-block" alt="Polytec logotipo" height="auto" width="40%">
+			</div>
+			<div class="col-12">
+				<span class="text-dark text-center dblock text-uppercase font-weight-bold fs10 ptb1">Site em construção</span>
+				<p class="text-dark text-center fs10 mb5">Em breve um novo site com toda a linha de produtos Polytec.</p>
+				<a href="mailto:contato@polytec.ind.br" class="d-block text-dark text-center fs10 mtb2">contato@polytec.ind.br</a>
+				<a href="tel:+5551999822730" class="d-block text-dark text-center fs10 font-weight-bold">+55 51 99982.2730</a>
+			</div>
+		</div>
+  	</div>
+
   </body>
 
 </html>
