--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   
   <body>
   	<div class="container-fluid h-100 d-inline-block">
-  		<div class="row h100 align-middle">
-    		<div class="col-12">    
+  		<div class="row justify-content-xl-center">
+    		<div class="col-12 col-xl-4">    
 		  		<img src="assets/img/logo.svg" class="logo mx-auto d-block" alt="Polytec logotipo" height="auto" width="40%">
 			</div>
-			<div class="col-12">
+			<div class="col-12 col-xl-12">
 				<span class="text-dark text-center dblock text-uppercase font-weight-bold fs10 ptb1">Site em construção</span>
 				<p class="text-dark text-center fs10 mb5">Em breve um novo site com toda a linha de produtos Polytec.</p>
 				<a href="mailto:contato@polytec.ind.br" class="d-block text-dark text-center fs10 mtb2">contato@polytec.ind.br</a>
