--- a/index.html
+++ b/index.html
@@ -23,27 +23,20 @@
   </head>
   
   <body>
-    
-
-    <!--
-  	<div class="container-fluid h100 d-inline-block plr2">
-  		<div class="row">
-    		<div class="col-6">		
-			  	<img src="assets/img/logo.svg" class="logo" alt="logotipo Polytec"/>
+  	<div class="container-fluid h-100 d-inline-block">
+  		<div class="row justify-content-xl-center">
+    		<div class="col-12 col-xl-4">    
+		  		<img src="assets/img/logo.svg" class="logo mx-auto d-block" alt="Polytec logotipo" height="auto" width="40%">
 			</div>
-			<div class="col-6">
-			   <div class="container-toggle">
-				  <div class="bar1"></div>
-				  <div class="bar2"></div>
-				  <div class="bar3"></div>
-      </div>
-	
-
-				
-			</div> 
+			<div class="col-12 col-xl-12">
+				<span class="text-dark text-center dblock text-uppercase font-weight-bold fs10 ptb1">Site em construção</span>
+				<p class="text-dark text-center fs10 mb5">Em breve um novo site com toda a linha de produtos Polytec.</p>
+				<a href="mailto:contato@polytec.ind.br" class="d-block text-dark text-center fs10 mtb2">contato@polytec.ind.br</a>
+				<a href="tel:+5551999822730" class="d-block text-dark text-center fs10 font-weight-bold">+55 51 99982.2730</a>
+			</div>
 		</div>
   	</div>
--->
+
   </body>
 
 </html>
